crates/apollo-compiler/test_data/diagnostics/0102_invalid_string_values.txt
Error: expected value of type String, found Int
    ╭─[0102_invalid_string_values.graphql:71:31]
    │
  8 │   stringArgField(stringArg: String): String
    │                             ───┬──  
    │                                ╰──── field declared here as String type
    │ 
 71 │     stringArgField(stringArg: 1)
    │                               ┬  
    │                               ╰── argument declared here is of Int type
────╯
Error: expected value of type String, found Float
    ╭─[0102_invalid_string_values.graphql:77:31]
    │
  8 │   stringArgField(stringArg: String): String
    │                             ───┬──  
    │                                ╰──── field declared here as String type
    │ 
 77 │     stringArgField(stringArg: 1.0)
    │                               ─┬─  
    │                                ╰─── argument declared here is of Float type
────╯
Error: expected value of type String, found Boolean
    ╭─[0102_invalid_string_values.graphql:83:31]
    │
  8 │   stringArgField(stringArg: String): String
    │                             ───┬──  
    │                                ╰──── field declared here as String type
    │ 
 83 │     stringArgField(stringArg: true)
    │                               ──┬─  
    │                                 ╰─── argument declared here is of Boolean type
────╯
Error: expected value of type String, found Enum
    ╭─[0102_invalid_string_values.graphql:89:31]
    │
  8 │   stringArgField(stringArg: String): String
    │                             ───┬──  
    │                                ╰──── field declared here as String type
    │ 
 89 │     stringArgField(stringArg: BAR)
    │                               ─┬─  
    │                                ╰─── argument declared here is of Enum type
────╯
Error: expected value of type Int, found String
    ╭─[0102_invalid_string_values.graphql:95:25]
    │
  6 │   intArgField(intArg: Int): String
    │                       ─┬─  
    │                        ╰─── field declared here as Int type
    │ 
 95 │     intArgField(intArg: "3")
    │                         ─┬─  
    │                          ╰─── argument declared here is of String type
────╯
Error: int cannot represent non 32-bit signed integer value
     ╭─[0102_invalid_string_values.graphql:101:25]
     │
 101 │     intArgField(intArg: 829384293849283498239482938)
     │                         ─────────────┬─────────────  
     │                                      ╰─────────────── cannot be coerced to an 32-bit integer
─────╯
Error: expected value of type Int, found Enum
     ╭─[0102_invalid_string_values.graphql:107:25]
     │
   6 │   intArgField(intArg: Int): String
     │                       ─┬─  
     │                        ╰─── field declared here as Int type
     │ 
 107 │     intArgField(intArg: FOO)
     │                         ─┬─  
     │                          ╰─── argument declared here is of Enum type
─────╯
Error: expected value of type Int, found Float
     ╭─[0102_invalid_string_values.graphql:113:25]
     │
   6 │   intArgField(intArg: Int): String
     │                       ─┬─  
     │                        ╰─── field declared here as Int type
     │ 
 113 │     intArgField(intArg: 3.0)
     │                         ─┬─  
     │                          ╰─── argument declared here is of Float type
─────╯
Error: expected value of type Int, found Float
     ╭─[0102_invalid_string_values.graphql:119:25]
     │
   6 │   intArgField(intArg: Int): String
     │                       ─┬─  
     │                        ╰─── field declared here as Int type
     │ 
 119 │     intArgField(intArg: 3.333)
     │                         ──┬──  
     │                           ╰──── argument declared here is of Float type
─────╯
Error: expected value of type Float, found String
     ╭─[0102_invalid_string_values.graphql:125:29]
     │
  11 │   floatArgField(floatArg: Float): String
     │                           ──┬──  
     │                             ╰──── field declared here as Float type
     │ 
 125 │     floatArgField(floatArg: "3.333")
     │                             ───┬───  
     │                                ╰───── argument declared here is of String type
─────╯
Error: expected value of type Float, found Boolean
     ╭─[0102_invalid_string_values.graphql:131:29]
     │
  11 │   floatArgField(floatArg: Float): String
     │                           ──┬──  
     │                             ╰──── field declared here as Float type
     │ 
 131 │     floatArgField(floatArg: true)
     │                             ──┬─  
     │                               ╰─── argument declared here is of Boolean type
─────╯
Error: expected value of type Float, found Enum
     ╭─[0102_invalid_string_values.graphql:137:29]
     │
  11 │   floatArgField(floatArg: Float): String
     │                           ──┬──  
     │                             ╰──── field declared here as Float type
     │ 
 137 │     floatArgField(floatArg: FOO)
     │                             ─┬─  
     │                              ╰─── argument declared here is of Enum type
─────╯
Error: expected value of type Boolean, found Int
     ╭─[0102_invalid_string_values.graphql:143:33]
     │
   9 │   booleanArgField(booleanArg: Boolean): String
     │                               ───┬───  
     │                                  ╰───── field declared here as Boolean type
     │ 
 143 │     booleanArgField(booleanArg: 2)
     │                                 ┬  
     │                                 ╰── argument declared here is of Int type
─────╯
Error: expected value of type Boolean, found Float
     ╭─[0102_invalid_string_values.graphql:149:33]
     │
   9 │   booleanArgField(booleanArg: Boolean): String
     │                               ───┬───  
     │                                  ╰───── field declared here as Boolean type
     │ 
 149 │     booleanArgField(booleanArg: 1.0)
     │                                 ─┬─  
     │                                  ╰─── argument declared here is of Float type
─────╯
Error: expected value of type Boolean, found String
     ╭─[0102_invalid_string_values.graphql:155:33]
     │
   9 │   booleanArgField(booleanArg: Boolean): String
     │                               ───┬───  
     │                                  ╰───── field declared here as Boolean type
     │ 
 155 │     booleanArgField(booleanArg: "true")
     │                                 ───┬──  
     │                                    ╰──── argument declared here is of String type
─────╯
Error: expected value of type Boolean, found Enum
     ╭─[0102_invalid_string_values.graphql:161:33]
     │
   9 │   booleanArgField(booleanArg: Boolean): String
     │                               ───┬───  
     │                                  ╰───── field declared here as Boolean type
     │ 
 161 │     booleanArgField(booleanArg: TRUE)
     │                                 ──┬─  
     │                                   ╰─── argument declared here is of Enum type
─────╯
Error: expected value of type ID, found Float
     ╭─[0102_invalid_string_values.graphql:167:23]
     │
  12 │   idArgField(idArg: ID): String
     │                     ─┬  
     │                      ╰── field declared here as ID type
     │ 
 167 │     idArgField(idArg: 1.0)
     │                       ─┬─  
     │                        ╰─── argument declared here is of Float type
─────╯
Error: expected value of type ID, found Boolean
     ╭─[0102_invalid_string_values.graphql:173:23]
     │
  12 │   idArgField(idArg: ID): String
     │                     ─┬  
     │                      ╰── field declared here as ID type
     │ 
 173 │     idArgField(idArg: true)
     │                       ──┬─  
     │                         ╰─── argument declared here is of Boolean type
─────╯
Error: expected value of type ID, found Enum
     ╭─[0102_invalid_string_values.graphql:179:23]
     │
  12 │   idArgField(idArg: ID): String
     │                     ─┬  
     │                      ╰── field declared here as ID type
     │ 
 179 │     idArgField(idArg: SOMETHING)
     │                       ────┬────  
     │                           ╰────── argument declared here is of Enum type
─────╯
Error: expected value of type DogCommand, found Int
     ╭─[0102_invalid_string_values.graphql:186:33]
     │
  47 │   doesKnowCommand(dogCommand: DogCommand): Boolean
     │                               ─────┬────  
     │                                    ╰────── field declared here as DogCommand type
     │ 
 186 │     doesKnowCommand(dogCommand: 2)
     │                                 ┬  
     │                                 ╰── argument declared here is of Int type
─────╯
Error: expected value of type DogCommand, found Float
     ╭─[0102_invalid_string_values.graphql:192:33]
     │
  47 │   doesKnowCommand(dogCommand: DogCommand): Boolean
     │                               ─────┬────  
     │                                    ╰────── field declared here as DogCommand type
     │ 
 192 │     doesKnowCommand(dogCommand: 1.0)
     │                                 ─┬─  
     │                                  ╰─── argument declared here is of Float type
─────╯
Error: expected value of type DogCommand, found String
     ╭─[0102_invalid_string_values.graphql:198:33]
     │
  47 │   doesKnowCommand(dogCommand: DogCommand): Boolean
     │                               ─────┬────  
     │                                    ╰────── field declared here as DogCommand type
     │ 
 198 │     doesKnowCommand(dogCommand: "SIT")
     │                                 ──┬──  
     │                                   ╰──── argument declared here is of String type
─────╯
Error: expected value of type DogCommand, found Boolean
     ╭─[0102_invalid_string_values.graphql:204:33]
     │
  47 │   doesKnowCommand(dogCommand: DogCommand): Boolean
     │                               ─────┬────  
     │                                    ╰────── field declared here as DogCommand type
     │ 
 204 │     doesKnowCommand(dogCommand: true)
     │                                 ──┬─  
     │                                   ╰─── argument declared here is of Boolean type
─────╯
Error: value `JUGGLE` does not exist on `DogCommand` type
     ╭─[0102_invalid_string_values.graphql:210:33]
     │
 210 │     doesKnowCommand(dogCommand: JUGGLE)
     │                                 ───┬──  
     │                                    ╰──── does not exist on `DogCommand` type
─────╯
Error: value `sit` does not exist on `DogCommand` type
     ╭─[0102_invalid_string_values.graphql:216:33]
     │
 216 │     doesKnowCommand(dogCommand: sit)
     │                                 ─┬─  
     │                                  ╰─── does not exist on `DogCommand` type
─────╯
Error: expected value of type String, found Int
     ╭─[0102_invalid_string_values.graphql:222:47]
     │
  13 │   stringListArgField(stringListArg: [String]): String
     │                                     ────┬───  
     │                                         ╰───── field declared here as String type
     │ 
 222 │     stringListArgField(stringListArg: ["one", 2])
     │                                               ┬  
     │                                               ╰── argument declared here is of Int type
─────╯
Error: expected value of type [String], found Int
     ╭─[0102_invalid_string_values.graphql:228:39]
     │
  13 │   stringListArgField(stringListArg: [String]): String
     │                                     ────┬───  
     │                                         ╰───── field declared here as [String] type
     │ 
 228 │     stringListArgField(stringListArg: 1)
     │                                       ┬  
     │                                       ╰── argument declared here is of Int type
─────╯
Error: expected value of type Int!, found String
     ╭─[0102_invalid_string_values.graphql:235:24]
     │
  16 │   multipleReqs(req1: Int!, req2: Int!): String
     │                                  ──┬─  
     │                                    ╰─── field declared here as Int! type
     │ 
 235 │     multipleReqs(req2: "two", req1: "one")
     │                        ──┬──  
     │                          ╰──── argument declared here is of String type
─────╯
Error: expected value of type Int!, found String
     ╭─[0102_invalid_string_values.graphql:235:37]
     │
  16 │   multipleReqs(req1: Int!, req2: Int!): String
     │                      ──┬─  
     │                        ╰─── field declared here as Int! type
     │ 
 235 │     multipleReqs(req2: "two", req1: "one")
     │                                     ──┬──  
     │                                       ╰──── argument declared here is of String type
─────╯
Error: the required argument `req2` is not provided
     ╭─[0102_invalid_string_values.graphql:241:5]
     │
  16 │   multipleReqs(req1: Int!, req2: Int!): String
     │                            ─────┬────  
     │                                 ╰────── argument defined here
     │ 
 241 │     multipleReqs(req1: "one")
     │     ────────────┬────────────  
     │                 ╰────────────── missing value for argument `req2`
─────╯
Error: expected value of type Int!, found String
     ╭─[0102_invalid_string_values.graphql:241:24]
     │
  16 │   multipleReqs(req1: Int!, req2: Int!): String
     │                      ──┬─  
     │                        ╰─── field declared here as Int! type
     │ 
 241 │     multipleReqs(req1: "one")
     │                        ──┬──  
     │                          ╰──── argument declared here is of String type
─────╯
Error: the required argument `req1` is not provided
     ╭─[0102_invalid_string_values.graphql:247:5]
     │
  16 │   multipleReqs(req1: Int!, req2: Int!): String
     │                ─────┬────  
     │                     ╰────── argument defined here
     │ 
 247 │     multipleReqs(req1: null)
     │     ────────────┬───────────  
     │                 ╰───────────── missing value for argument `req1`
─────╯
Error: the required argument `req2` is not provided
     ╭─[0102_invalid_string_values.graphql:247:5]
     │
  16 │   multipleReqs(req1: Int!, req2: Int!): String
     │                            ─────┬────  
     │                                 ╰────── argument defined here
     │ 
 247 │     multipleReqs(req1: null)
     │     ────────────┬───────────  
     │                 ╰───────────── missing value for argument `req2`
─────╯
Error: expected value of type Int!, found Null
     ╭─[0102_invalid_string_values.graphql:247:24]
     │
  16 │   multipleReqs(req1: Int!, req2: Int!): String
     │                      ──┬─  
     │                        ╰─── field declared here as Int! type
     │ 
 247 │     multipleReqs(req1: null)
     │                        ──┬─  
     │                          ╰─── argument declared here is of Null type
─────╯
Error: the required argument `requiredField` is not provided
     ╭─[0102_invalid_string_values.graphql:254:33]
     │
  32 │   requiredField: Boolean!
     │   ───────────┬───────────  
     │              ╰───────────── argument defined here
     │ 
 254 │     complexArgField(complexArg: { intField: 4 })
     │                                 ───────┬───────  
     │                                        ╰───────── missing value for argument `requiredField`
─────╯
Error: expected value of type String, found Int
     ╭─[0102_invalid_string_values.graphql:261:32]
     │
  37 │   stringListField: [String]
     │                    ────┬───  
     │                        ╰───── field declared here as String type
     │ 
 261 │       stringListField: ["one", 2],
     │                                ┬  
     │                                ╰── argument declared here is of Int type
─────╯
Error: expected value of type Boolean!, found Null
     ╭─[0102_invalid_string_values.graphql:271:7]
     │
  33 │   nonNullField: Boolean! = false
     │                 ────┬───  
     │                     ╰───── field declared here as Boolean! type
     │ 
 271 │       nonNullField: null,
     │       ─────────┬────────  
     │                ╰────────── argument declared here is of Null type
─────╯
Error: value `invalidField` does not exist on `ComplexInput` type
     ╭─[0102_invalid_string_values.graphql:280:7]
     │
 280 │       invalidField: "value"
     │       ──────────┬──────────  
     │                 ╰──────────── does not exist on `ComplexInput` type
─────╯
Error: expected value of type Boolean!, found String
     ╭─[0102_invalid_string_values.graphql:287:20]
     │
 287 │   dog @include(if: "yes") {
     │                    ──┬──  
     │                      ╰──── argument declared here is of String type
─────╯
Error: expected value of type Boolean!, found Enum
     ╭─[0102_invalid_string_values.graphql:288:20]
     │
 288 │     name @skip(if: ENUM)
     │                    ──┬─  
     │                      ╰─── argument declared here is of Enum type
─────╯
Error: expected value of type Int!, found Null
     ╭─[0102_invalid_string_values.graphql:294:14]
     │
 294 │   $a: Int! = null,
     │       ──┬─   ──┬─  
     │         ╰────────── field declared here as Int! type
     │                │   
     │                ╰─── argument declared here is of Null type
─────╯
Error: expected value of type String!, found Null
     ╭─[0102_invalid_string_values.graphql:295:17]
     │
 295 │   $b: String! = null,
     │       ───┬───   ──┬─  
     │          ╰──────────── field declared here as String! type
     │                   │   
     │                   ╰─── argument declared here is of Null type
─────╯
Error: the required argument `requiredField` is not provided
     ╭─[0102_invalid_string_values.graphql:296:22]
     │
  32 │   requiredField: Boolean!
     │   ───────────┬───────────  
     │              ╰───────────── argument defined here
     │ 
 296 │   $c: ComplexInput = { requiredField: null, intField: null }
     │                      ───────────────────┬───────────────────  
     │                                         ╰───────────────────── missing value for argument `requiredField`
─────╯
Error: expected value of type Boolean!, found Null
     ╭─[0102_invalid_string_values.graphql:296:24]
     │
  32 │   requiredField: Boolean!
     │                  ────┬───  
     │                      ╰───── field declared here as Boolean! type
     │ 
 296 │   $c: ComplexInput = { requiredField: null, intField: null }
     │                        ─────────┬─────────  
     │                                 ╰─────────── argument declared here is of Null type
─────╯
Error: expected value of type Int, found String
     ╭─[0102_invalid_string_values.graphql:306:13]
     │
 306 │   $a: Int = "one",
     │       ─┬─   ──┬──  
     │        ╰─────────── field declared here as Int type
     │               │    
     │               ╰──── argument declared here is of String type
─────╯
Error: expected value of type String, found Int
     ╭─[0102_invalid_string_values.graphql:307:16]
     │
 307 │   $b: String = 4,
     │       ───┬──   ┬  
     │          ╰──────── field declared here as String type
     │                │  
     │                ╰── argument declared here is of Int type
─────╯
Error: expected value of type ComplexInput, found String
     ╭─[0102_invalid_string_values.graphql:308:22]
     │
 308 │   $c: ComplexInput = "NotVeryComplex"
     │       ──────┬─────   ────────┬───────  
     │             ╰────────────────────────── field declared here as ComplexInput type
     │                              │         
     │                              ╰───────── argument declared here is of String type
─────╯
Error: expected value of type Boolean!, found Int
     ╭─[0102_invalid_string_values.graphql:318:24]
     │
  32 │   requiredField: Boolean!
     │                  ────┬───  
     │                      ╰───── field declared here as Boolean! type
     │ 
 318 │   $a: ComplexInput = { requiredField: 123, intField: "abc" }
     │                        ─────────┬────────  
     │                                 ╰────────── argument declared here is of Int type
─────╯
Error: expected value of type Int, found String
     ╭─[0102_invalid_string_values.graphql:318:44]
     │
  34 │   intField: Int
     │             ─┬─  
     │              ╰─── field declared here as Int type
     │ 
 318 │   $a: ComplexInput = { requiredField: 123, intField: "abc" }
     │                                            ───────┬───────  
     │                                                   ╰───────── argument declared here is of String type
─────╯
Error: the required argument `requiredField` is not provided
     ╭─[0102_invalid_string_values.graphql:326:22]
     │
  32 │   requiredField: Boolean!
     │   ───────────┬───────────  
     │              ╰───────────── argument defined here
     │ 
 326 │   $a: ComplexInput = {intField: 3}
     │                      ──────┬──────  
     │                            ╰──────── missing value for argument `requiredField`
─────╯
Error: expected value of type String, found Int
     ╭─[0102_invalid_string_values.graphql:335:26]
     │
 335 │   $a: [String] = ["one", 2]
     │       ────┬───           ┬  
     │           ╰───────────────── field declared here as String type
     │                          │  
     │                          ╰── argument declared here is of Int type
─────╯

